--- a/src/World.css
+++ b/src/World.css
@@ -3,6 +3,14 @@
   --default-number-of-tiles: 28;
 }
 
+*,
+*::before,
+*::after{
+  padding: 0;
+  margin: 0;
+  box-sizing: inherit;
+}
+
 html{
   font-size: 62.5%;
 }
@@ -31,4 +39,8 @@ html{
 }
 .wall-follower-div{
   background: rgba(35, 177, 66, 1);
+}
+
+.creature{
+  position: relative;
 }
