--- a/src/scss/containers/world.scss
+++ b/src/scss/containers/world.scss
@@ -35,10 +35,10 @@
   background: rgba(35, 177, 66, 1);
 }
 
-.creature{
+.critter{
   position: absolute;
 }
 
-.creature-container{
+.critter-container{
   position: absolute;
 }
